# pytest-jira-xray

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.rst  README.md  README.rst  pyproject.toml  requirements-dev.txt  requirements-tests.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: main.yml
src/pytest_xray/: constant.py  evidence.py  exceptions.py  file_publisher.py  helper.py  hooks.py  plugin.py  xray_plugin.py  xray_publisher.py
tests/: conftest.py  mock_server.py  test_evidence.py  test_evidence_with_duplicated_ids.py  test_helper.py  test_model.py  test_xray.py  test_xray_plugin.py
