[project]
name = "pytest-jira-xray"
description = "pytest plugin to integrate tests with JIRA XRAY"
readme = "README.rst"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [{ name = "Lukasz Fundakowski", email = "fundakol@yahoo.com" }]
keywords = ["pytest, JIRA, XRAY"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Framework :: Pytest",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14"
]
dependencies = ["pytest>=6.2.4", "requests>=2.27.0"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/fundakol/pytest-jira-xray"

[project.entry-points.pytest11]
xray = "pytest_xray.plugin"

[dependency-groups]
dev = [
  "pre-commit>=4.3.0",
  "tox>=4.30.3",
  { include-group = "lint" },
  { include-group = "test" },
]
lint = [
  "mypy>=1.18.2",
  "ruff>=0.14.3",
  "types-requests>=2.32.4.20250913",
]
test = [
  "pytest-cov>=7.0.0",
  "pytest-httpserver>=1.1.3",
  "pytest-xdist>=3.8.0",
]

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 120
skip-string-normalization = true
target-version = ["py39"]

[tool.isort]
profile = "black"
src_paths = ["src", "tests"]
filter_files = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
files = ["src", "tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
src = [
  "src",
  "tests",
]

[tool.ruff.lint]
select = [
  "E",  # pycodestyle
  "F",  # Pyflakes
  "UP",  # pyupgrade
  "B",  # flake8-bugbear
  "SIM",  # flake8-simplify
  "I",  # isort
]
ignore = [
  "SIM108",  # if-else-block-instead-of-if-exp
]

[tool.ruff.format]
quote-style = "single"

[tool.setuptools_scm]
