[metadata]
name=pytest-jira-xray
version=0.1.4
url=https://github.com/fundakol/pytest-jira-xray
author=Lukasz Fundakowski
author_email=fundakol@yahoo.com
description=pytest plugin to integrate tests with JIRA XRAY
long_description=file: README.md
long_description_content_type=text/markdown
python_requires=>=3.6
keywords=pytest,JIRA,XRAY
classifiers=
    Development Status :: 3 - Alpha
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages=find:
package_dir=
    =src
install_requires=
    pytest
    requests

[options.packages.find]
where=src

[options.entry_points]
pytest11=
    xray=pytest_xray.plugin
